--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,15 +1,17 @@
 ﻿<Page
-    x:Class="MesibaViewer.MainPage"
+    x:Class="PartySelectionPanel.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MesibaViewer"
-    xmlns:view="using:MesibaViewer.View"
-    xmlns:viewModel="using:MesibaViewer.ViewModel"
+    xmlns:local="using:PartySelectionPanel"
+    xmlns:view="using:PartySelectionPanel.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <view:PartyImageView/>
+        <StackPanel Orientation="Horizontal">
+            <TextBlock HorizontalAlignment="Left" Text="Map that shows the locations of the parties"/>
+            <view:PartyPanelView VerticalAlignment="Stretch" HorizontalAlignment="Right"/>
+        </StackPanel>
     </Grid>
 </Page>
