--- a/Hamburger.UI/MainPage.xaml
+++ b/Hamburger.UI/MainPage.xaml
@@ -190,7 +190,7 @@
                                     <Image Source="http://buylaughs.com/wp-content/uploads/2014/01/Funny-Babies-Pictures-2.jpg"/>
                                 </ScrollViewer>
                             </Frame>
-                            <Frame Name="PdfFrame" Visibility="Collapsed" ><!--Loaded="PdfFrame_Loaded">-->
+                            <Frame Name="PdfFrame" Visibility="Collapsed" Loaded="LoadDocument"><!--Loaded="PdfFrame_Loaded">-->
                                 <!--<ScrollViewer ZoomMode="Enabled" Background="DarkGray" Grid.Column="1">
                                     <ItemsControl ItemsSource="{Binding PdfPages, ElementName=root}">
                                         <ItemsControl.ItemTemplate>
@@ -202,29 +202,29 @@
                                 </ScrollViewer>-->
                                 <ScrollViewer Margin="12,20,12,12">
                                     <StackPanel>
-                                        <TextBlock Text="Description:" />
+                                        <!--<TextBlock Text="Description:" />
                                         <TextBlock TextWrapping="Wrap">
                     Loading and rendering a PDF document
                                         </TextBlock>
                                         <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
                                             <Button x:Name="LoadButton" Content="Load document" Click="{x:Bind LoadDocument}" Margin="5,0"/>
                                             <PasswordBox x:Name="PasswordBox" Width="200" PlaceholderText="Optional password"/>
-                                        </StackPanel>
+                                        </StackPanel>-->
 
                                         <StackPanel x:Name="RenderingPanel" Visibility="Collapsed">
                                             <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
                                                 <TextBlock VerticalAlignment="center">View page</TextBlock>
-                                                <TextBox x:Name="PageNumberBox" InputScope="Number" Width="30" Text="1" TextAlignment="Right" Margin="5,0,5,0"/>
+                                                <TextBox x:Name="PageNumberBox" InputScope="Number" Width="30" Text="{x:Bind pageNumber}" TextAlignment="Right" Margin="5,0,5,0"/>
                                                 <TextBlock VerticalAlignment="Center">of <Run x:Name="PageCountText"/>.</TextBlock>
                                             </StackPanel>
-                                            <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+                                            <!--<StackPanel Orientation="Horizontal" Margin="0,10,0,0">
                                                 <ComboBox x:Name="Options" SelectedIndex="0">
                                                     <ComboBoxItem>Actual size</ComboBoxItem>
                                                     <ComboBoxItem>Half size on beige background</ComboBoxItem>
                                                     <ComboBoxItem>Crop to center of page</ComboBoxItem>
                                                 </ComboBox>
                                                 <Button Click="{x:Bind ViewPage}" Content="View" Margin="10,0,0,0"/>
-                                            </StackPanel>
+                                            </StackPanel>-->
 
                                             <Image x:Name="Output" Stretch="None" Margin="0,10,0,0"/>
                                         </StackPanel>
