--- a/Hamburger.UI/Views/MapView.xaml
+++ b/Hamburger.UI/Views/MapView.xaml
@@ -13,6 +13,7 @@
     xmlns:views="using:Hamburger.UI.Views"
     xmlns:vm="using:Hamburger.UI.ViewModels"
     xmlns:converter="using:Hamburger.UI.Converters"
+    xmlns:toolkit="using:Esri.ArcGISRuntime.Toolkit.Controls"
     mc:Ignorable="d">
     <Page.Resources>
         <converter:BooleanToVisibilityConverter x:Key="BoolToVisibleConverter"/>
@@ -25,7 +26,7 @@
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <esri:SceneView x:Name="RooSceneView"
 					  LayerLoaded="OnRootSceneViewLayerLoaded">
-            <esri:Scene>
+            <esri:Scene x:Name="element1">
                 <esri:Scene.Surface>
                     <esri:ElevationSourceCollection>
                         <esri:ServiceElevationSource ServiceUri="http://elevation3d.arcgis.com/arcgis/rest/services/WorldElevation3D/Terrain3D/ImageServer"/>
@@ -35,9 +36,13 @@
                             ServiceUri="http://services.arcgisonline.com/arcgis/rest/services/World_Imagery/MapServer" />
             </esri:Scene>
         </esri:SceneView>
+        <toolkit:ScaleLine Scale="{Binding ElementName=RooSceneView.Map, Path=Scale}"
+						   HorizontalAlignment="Left" VerticalAlignment="Bottom"
+                           Foreground="White" FontSize="16" Margin="26 0 0 44"
+                           Visibility="{Binding IsScalebarVisible, Mode=OneWay, Converter={StaticResource BoolToVisibleConverter}}"/>
         <RelativePanel VerticalAlignment="Bottom" HorizontalAlignment="Center">
             <views:PaintToolBox View="{Binding ElementName=RooSceneView}" x:Name="PaintToolBox" RelativePanel.RightOf="NorthButton" Visibility="{Binding IsToolboxVisible, Mode=OneWay, Converter={StaticResource BoolToVisibleConverter}}"/>
-            <Button Name ="NorthButton" Foreground="White" Content="&#xE1D1;" FontFamily="Segoe MDL2 Assets" FontSize="36" Click="NorthButton_Click" Command="{Binding MyCommand}" Margin="0 0 20 0" RelativePanel.AlignHorizontalCenterWithPanel="True"/>
+            <Button Name ="NorthButton" Foreground="White" Content="&#xE1D1;" FontFamily="Segoe MDL2 Assets" FontSize="36" Click="NorthButton_Click" Margin="0 0 20 0" RelativePanel.AlignHorizontalCenterWithPanel="True"/>
         </RelativePanel>
     </Grid>
 </Page>
